fix: height and zoom behavior for ios

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -8,7 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@300&display=block"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
+    />
     <meta
       name="description"
       content="Seon is a local-first web app that helps you set and track your goals."
