--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -39,7 +39,7 @@
       <!-- This spinner shows if it takes more than 400ms for React and dependencies to load. 
        It only shows for production build. -->
       <div
-        class="flex items-center justify-center gap-2 px-2 py-1 [&>*]:rounded-full [&>*]:bg-gray-500"
+        class="flex items-center justify-center gap-2 px-2 py-1 *:rounded-full *:bg-gray-500"
       >
         <div class="h-2 w-2 animate-bounce [animation-delay:-0.3s]"></div>
         <div class="h-2 w-2 animate-bounce [animation-delay:-0.15s]"></div>
